--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -29,8 +29,8 @@
                 </section>
             </form>
             <section class="alternatives" fxLayout="row" fxLayoutGap="30px" fxLayoutAlign="center center">
-                <mat-checkbox fxLayoutAlign="start">Remember me</mat-checkbox>
-                <a mat-button href="#" fxLayoutAlign="end">Forgot password?</a>
+                <mat-checkbox>Remember me</mat-checkbox>
+                <a mat-button href="#">Forgot password?</a>
             </section>
         </section>
         <section class="footer">
