--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-signin></app-signin>
+<section class="main banner">
+    <app-header></app-header>
+    <app-signin></app-signin>
+    <app-footer></app-footer>
+</section>
