--- a/src/app/signin/signin.component.scss
+++ b/src/app/signin/signin.component.scss
@@ -1,33 +1,29 @@
 .pg-signin {
-    .form {
-        overflow: scroll;
+    height: calc(100vh - 100px);
 
-        .header, .footer {
-            padding: 10px;
+    .sign-in {
+        margin: auto auto;
+        width: 400px;
+        border-radius: 5px;
+        background: #fffc;
+
+        .mat-toolbar {
+            background: #0008;
+            color: white;
+            border-radius: 5px 5px 0 0;
+            cursor: move;
         }
 
-        .footer {
-            mat-icon {
-                font-size: 0.6em;
-                padding: 4px;
-                line-height: inherit;
-                width: inherit;
-                height: inherit;
-            }
+        .titlebar {
+            // color: #6B6C6F;
+            font-size: 0.8em;
+            // background-color: #fff5;
         }
 
-        .sign-in {
-            margin: auto auto;
-            border: 1px solid #eee;
-            width: 350px;
+        .body {
             padding: 15px;
-            border-radius: 5px;
-            box-shadow: 6px 6px 6px #eee8;
-
-            p {
-                color: #6B6C6F;
-                font-size: 0.9em;
-            }
+            overflow: scroll;
+            width: calc(400px - 30px);
 
             * {
                 width: 100%;
@@ -37,8 +33,5 @@
                 padding-top: 20px;
             }
         }
-    }
-    .banner {
-        background: top left repeat url('../../assets/images/banner.svg');
     }
 }
