--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,7 @@
 .main {
     margin: auto;
-    // max-width: 700px;
 
     &.banner {
-        background: top left repeat url('https://images.unsplash.com/photo-1618677064524-58aa3077d724?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1440&q=80'); // url('../assets/images/banner.svg');
+        background: top left repeat url('https://images.unsplash.com/photo-1556509511-4ee17e467199?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1440&q=80');
     }
 }
