--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,13 +1,13 @@
 <section class="footer trans light noshad">
     <section class="pages" fxLayoutAlign="start" fxFlex="50">
-        <a mat-button href="#">Impress</a>
-        <mat-icon>radio_button_unchecked</mat-icon>
+        <a mat-button href="#">Terms of Use</a>
+        <mat-icon class="img material-icons-filled">circle</mat-icon>
         <a mat-button href="#">Privacy</a>
     </section>
 
     <section class="lang" fxLayoutAlign="end" fxFlex="50">
         <a mat-button href="#">DE</a>
-        <mat-icon>radio_button_unchecked</mat-icon>
+        <mat-icon class="img material-icons-filled">circle</mat-icon>
         <a mat-button href="#" class="active" disabled>EN</a>
     </section>
 </section>
