--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body {
@@ -47,7 +46,6 @@ body {
         box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
         backdrop-filter: blur( 5.0px );
         -webkit-backdrop-filter: blur( 5.0px );
-        border: 1px solid rgba( 255, 255, 255, 0.18 );
 
         &.noshad {
             box-shadow: none;
@@ -63,7 +61,7 @@ body {
         }
 
         &.light {
-            background: #fffe;
+            background: #fffa;
             color: rgb(41, 41, 41);
         }
     }
