--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,8 @@
     margin: auto;
 
     &.banner {
-        background: top left repeat url('https://images.unsplash.com/photo-1556509511-4ee17e467199?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1440&q=80');
+        background-image: url(https://images.unsplash.com/photo-1556509511-4ee17e467199?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1440&q=80);
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 }
